# icm

./: .gitignore  Makefile  README.md  icm-run.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml
icm/: __init__.py  __main__.py
icm/commands/: cmd_create.py  cmd_info.py  cmd_init.py  cmd_install.py  cmd_list.py  cmd_ls.py  cmd_rm.py  cmd_update.py  cmd_validate.py
icm/commons/: commons.py  store.py
icm/resources/: README.tpl.md  package.tpl.json  translation.tpl.js
test/: conftest.py  test_create.py  test_install.py  test_update.py  test_validate.py
