[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "icm"
author = "Jesus Arroyo"
author-email = "jesus.jkhlg@gmail.com "
home-page = "https://github.com/FPGAwars/icm"
classifiers=[
        'Development Status :: 3 - Alpha',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
        'Programming Language :: Python']
description-file = "README.md"
requires-python = ">=3.9"
requires = [
    'click>=8.1.7',
    'semantic_version>=2.10.0',
    'polib>=1.2.0',
    'requests>=2.32.3',
    'tqdm>=4.66.4'
]

[tool.flit.scripts]
icm = "icm.__main__:cli"

[tool.black]
line-length = 79
target-version = ['py39']
